# DigitalClock5

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  crowdin.yml  datetime_formatter.cpp  datetime_formatter.hpp  font_skin.cpp  glyph.cpp  graphics.cpp  graphics.hpp  graphics_widgets.cpp  graphics_widgets.hpp  main.cpp
app/: CMakeLists.txt  about_dialog.hpp  application.cpp  application.hpp  build_date.hpp  clock_icon_engine.hpp  clock_tray_icon.cpp  clock_window.cpp  clock_window.hpp  dialog_manager.hpp  main.cpp  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui  skin_manager.cpp  skin_manager.hpp  state.hpp  update_checker.hpp  version.hpp.in
app/config/: app_config.cpp  app_config.hpp  app_state.cpp  app_state.hpp  config_sections.cpp  config_sections.hpp  dc4_to_dc5.cpp  dc4_to_dc5.hpp  dc5_legacy.cpp  dc5_legacy.hpp  global_options.hpp  serialization.cpp  serialization.hpp  settings_backend_impl.cpp  settings_backend_impl.hpp
app/core/: application.cpp  application.hpp  build_date.cpp  clock_application.cpp  clock_application.hpp  clock_application_settings.cpp  compat.cpp  compat.hpp  plugin_info.hpp  plugin_manager.cpp  plugin_manager.hpp  plugin_manager_impl.cpp  plugin_manager_impl.hpp  settings_change_listener.cpp  settings_change_listener.hpp  skin_manager.cpp  skin_manager.hpp  skin_manager_impl.cpp  skin_manager_impl.hpp  translation.cpp  translation.hpp  tray_icon_manager_impl.cpp  tray_icon_manager_impl.hpp  update_checker.cpp
app/gui/: about_dialog.cpp  about_dialog.ui  clock_icon_engine.cpp  clock_icon_engine.hpp  clock_tray_icon.cpp  clock_tray_icon.hpp  clock_widget.cpp  clock_widget.hpp  clock_window.cpp  clock_window.hpp  overlay_widget.cpp  overlay_widget.hpp  plugin_info_dialog.cpp  plugin_info_dialog.hpp  plugin_info_dialog.ui  plugin_list_item_widget.cpp  plugin_list_item_widget.hpp  plugin_list_item_widget.ui  plugin_settings_dialog.cpp  plugin_settings_dialog.hpp  plugin_settings_dialog.ui  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui
app/i18n/: digital_clock_en.ts  digital_clock_ko.ts  digital_clock_pt_BR.ts  digital_clock_pt_PT.ts  digital_clock_ru.ts  digital_clock_ru_RU.ts  digital_clock_tr.ts  digital_clock_tr_TR.ts  digital_clock_zh_CN.ts  digital_clock_zh_TW.ts
app/platform/: CMakeLists.txt  autostart.h  clock_native_window.hpp  mouse_tracker.hpp  mouse_tracker_impl_stub.cpp
app/res/: CMakeLists.txt  icons.qrc  langs.ini
app/skin/: error_skin.cpp  error_skin.hpp  legacy_skin.cpp  legacy_skin.hpp  time_renderer.cpp  time_renderer.hpp
clock_common/: CMakeLists.txt  clock_common.rc.in  clock_common_global.hpp  common_appearance_state.cpp  common_appearance_state.hpp  state.cpp  state.hpp
clock_common/common/: config_base.cpp  instance_options.hpp  instance_options_hash.hpp  settings.cpp  skin_manager.cpp  skin_manager.hpp  tray_icon_manager.cpp  tray_icon_manager.hpp  variant_converters.hpp
clock_common/config/: appearance_base.cpp  appearance_base.hpp  config_base.hpp  custom_converters.hpp  sample_brushes.cpp  sample_brushes.hpp  settings.hpp  settings_storage.cpp  settings_storage.hpp  variant_converters.hpp
clock_common/utilities/: datetime_formatter.cpp  datetime_formatter.hpp
plugin_core/: CMakeLists.txt  clock_plugin.cpp  clock_plugin.hpp  plugin_config.cpp  plugin_config.hpp  plugin_core.rc.in  plugin_core_global.hpp  settings_bridge.cpp  settings_bridge.hpp  shared_config_keys.hpp  widget_plugin_base.cpp  widget_plugin_base.hpp
plugin_core/i18n/: plugin_core_en.ts  plugin_core_ko.ts  plugin_core_pt_BR.ts  plugin_core_pt_PT.ts  plugin_core_ru.ts  plugin_core_ru_RU.ts  plugin_core_tr.ts  plugin_core_tr_TR.ts  plugin_core_zh_CN.ts  plugin_core_zh_TW.ts
plugin_core/impl/: appearance_settings_widget.cpp  appearance_settings_widget.hpp  appearance_settings_widget.ui  geometry_settings_widget.cpp  geometry_settings_widget.hpp  geometry_settings_widget.ui  plugin_section_appearance.hpp  widget_plugin_base_impl.cpp  widget_plugin_base_impl.hpp
plugin_core/plugin/: clock_plugin.cpp  clock_plugin.hpp  plugin_settings.cpp  plugin_settings.hpp
plugins/: CMakeLists.txt
plugins/any_zoom/: CMakeLists.txt  any_zoom.json.in  any_zoom.rc.in  any_zoom_plugin.cpp  any_zoom_plugin.hpp  readme.txt
plugins/chime/: CMakeLists.txt  chime.json.in  chime.qrc  chime.rc.in  chime_plugin.cpp  chime_plugin.hpp
plugins/countdown_timer/: CMakeLists.txt  countdown_timer.rc.in  countdown_timer_plugin.cpp  countdown_timer_plugin.hpp  readme.txt
plugins/date/: CMakeLists.txt  date.json.in  date.rc.in  date_plugin.cpp  date_plugin.hpp  readme.txt
plugins/ip_address/: CMakeLists.txt  ip_address.rc.in  ip_address_plugin.cpp  ip_address_plugin.hpp  readme.txt
plugins/quick_note/: CMakeLists.txt  quick_note.json.in  quick_note_plugin.cpp  quick_note_plugin.hpp  readme.txt
plugins/random_position/: CMakeLists.txt  random_position.rc.in  random_position_plugin.cpp  random_position_plugin.hpp
plugins/sample/: CMakeLists.txt  readme.txt  sample.json.in  sample.rc.in  sample_plugin.cpp  sample_plugin.hpp
plugins/scheduled_color/: CMakeLists.txt  scheduled_color.json.in  scheduled_color.rc.in  scheduled_color_plugin.cpp  scheduled_color_plugin.hpp
plugins/spectrum_clock/: CMakeLists.txt  spectrum_clock.json.in  spectrum_clock.rc.in  spectrum_clock_plugin.cpp  spectrum_clock_plugin.hpp
plugins/stopwatch/: CMakeLists.txt  readme.txt  stopwatch.rc.in  stopwatch_plugin.cpp  stopwatch_plugin.hpp
plugins/talking_clock/: CMakeLists.txt  talking_clock.qrc  talking_clock_plugin.cpp  talking_clock_plugin.hpp
plugins/time_zone/: CMakeLists.txt  readme.txt  time_zone.rc.in  time_zone_plugin.cpp  time_zone_plugin.hpp
plugins/var_translucency/: CMakeLists.txt  var_translucency.json.in  var_translucency.rc.in  var_translucency_plugin.cpp  var_translucency_plugin.hpp
skin_engine/: CMakeLists.txt  layout_config_parser.cpp  layout_config_parser.hpp  scale_factor.hpp  skin_engine.rc.in  skin_engine_global.hpp  skinned_widget.cpp  skinned_widget.hpp
skin_engine/renderer/: font_skin.cpp  font_skin.hpp  image_skin.cpp  (+16 more)
(+331 files in other folders)
